@@ -1,3 +1,7 @@
+Fri Oct 24 18:22:22 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* gnome-da-capplet.c (main): Use new capplet_init() function
+
 Fri Oct 24 17:54:17 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* gnome-da-capplet.c (main): Fix to use gtk_init_with_args() correctly.
