@@ -1,3 +1,7 @@
+Fri Oct 24 18:22:06 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* capplet-util.[ch]: Add new capplet_init() function
+
 Fri Oct 24 17:21:56 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* capplet-stock-icons.c (capplet_register_stock_icons): Get rid of
